# livekit-demo

./: .gitignore  Dockerfile  README.md  pyproject.toml  tts.py
.github/workflows/: aws.yml
docker/: docker-compose.yml
src/: agent.py  booking_agent_action.py  booking_agent_intake.py  custom_tts_agent.py  loan_agent.py
src/prompts/: english.md  system_prompt.md
src/prompts/booking/: action.md  intake.md
src/utils/: prompt_utils.py
