[project]
name = "livekit-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chiecthuyenngoaixa>=0.2.1",
    "jinja2>=3.1.6",
    "livekit-agents[assemblyai,cartesia,deepgram,elevenlabs,google,openai,silero,turn-detector]~=1.2",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv>=1.1.1",
]
